edit css for non con css and add link between pages

--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <div class="images">
             <div class="one">
                 <img class="brain, thumbnail" src="pictures/brain.jpg" alt=Brain>
-                <p class="subtext">Non-contrast CT head</p>
+                <a href="ct_head_nc.html" class="subtext">Non-contrast CT head</a>
             </div>
             <div class="two">
                 <img class="ct_chest, thumbnail" src="pictures/ct_chest.jpg" alt="Computed Tomography of the chest">
