ct head non con update

--- a/ct_head_nc.html
+++ b/ct_head_nc.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Non-contrast CT head</title>
+    <script src=reporting_template.js defer></script>
     <link rel="stylesheet" href="style.css" type="text/css">
 </head>
 <body>
@@ -25,30 +26,57 @@
         </div>
         <div class="search_list">
             <button class="item_check">Clinical information and prior imaging</button>
+                <div class="panel">
+                    <p>asljfashldflasdf</p>
+                </div>
             <button class="reviewed">Checked</button>
             <div class="break"></div>
             <button class="item_check">Scout images</button>
+                <div class="panel">
+                    <p>asljfashldflasdf</p>
+                </div>
             <button class="reviewed">Checked</button>
             <div class="break"></div>
             <button class="item_check">Extracranial soft tissues</button>
+                <div class="panel">
+                    <p>askdfasdfbkasdfjkhasdigfjkasdgfjiasdhfjkashdfasdjkfhasjkdfhaslfhasdiofhasdlkfhasldfsladhfjasdhfasdohflasdhfasldhflasdhfklasdfhksdafasdklfj</p>
+                </div>
             <button class="reviewed">Checked</button>
             <div class="break"></div>
             <button class="item_check"> Bones</button>
+                <div class="panel">
+                    <p>askdfasdfbkasdfjkhasdigfjkasdgfjiasdhfjkashdfasdjkfhasjkdfhaslfhasdiofhasdlkfhasldfsladhfjasdhfasdohflasdhfasldhflasdhfklasdfhksdafasdklfj</p>
+                </div>
             <button class="reviewed">Checked</button>
             <div class="break"></div>
             <button class="item_check">CSF spaces</button>
+                <div class="panel">
+                    <p>askdfasdfbkasdfjkhasdigfjkasdgfjiasdhfjkashdfasdjkfhasjkdfhaslfhasdiofhasdlkfhasldfsladhfjasdhfasdohflasdhfasldhflasdhfklasdfhksdafasdklfj</p>
+                </div>
             <button class="reviewed">Checked</button>
             <div class="break"></div>
             <button class="item_check">Brain parenchyma</button>
+                <div class="panel">
+                    <p>askdfasdfbkasdfjkhasdigfjkasdgfjiasdhfjkashdfasdjkfhasjkdfhaslfhasdiofhasdlkfhasldfsladhfjasdhfasdohflasdhfasldhflasdhfklasdfhksdafasdklfj</p>
+                </div>
             <button class="reviewed">Checked</button>
             <div class="break"></div>
             <button class="item_check">Ischaemic change</button>
+                <div class="panel">
+                    <p>askdfasdfbkasdfjkhasdigfjkasdgfjiasdhfjkashdfasdjkfhasjkdfhaslfhasdiofhasdlkfhasldfsladhfjasdhfasdohflasdhfasldhflasdhfklasdfhksdafasdklfj</p>
+                </div>
             <button class="reviewed">Checked</button>
             <div class="break"></div>
             <button class="item_check">Double check on coronals</button>
+                <div class="panel">
+                    <p>askdfasdfbkasdfjkhasdigfjkasdgfjiasdhfjkashdfasdjkfhasjkdfhaslfhasdiofhasdlkfhasldfsladhfjasdhfasdohflasdhfasldhflasdhfklasdfhksdafasdklfj</p>
+                </div>
             <button class="reviewed">Checked</button>
             <div class="break"></div>
             <button class="item_check">Double check on sagittals</button>
+                <div class="panel">
+                    <p>askdfasdfbkasdfjkhasdigfjkasdgfjiasdhfjkashdfasdjkfhasjkdfhaslfhasdiofhasdlkfhasldfsladhfjasdhfasdohflasdhfasldhflasdhfklasdfhksdafasdklfj</p>
+                </div>
             <button class="reviewed">Checked</button>
             <div class="break"></div>
                      
