Got the template to work for the reporting steps - including the accordion alignment

--- a/ct_head_nc.html
+++ b/ct_head_nc.html
@@ -22,7 +22,7 @@
             </div>       
         </div>
         <div class="container_2">
-            <h1 class="header">Search pattern</h1>
+            <h1 class="subheading">Search pattern</h1>
         </div>
         <div class="search_list">
             <button class="item_check">Clinical information and prior imaging</button>
@@ -79,10 +79,29 @@
                 </div>
             <button class="reviewed">Checked</button>
             <div class="break"></div>
-                     
-            
-
+            <button class="item_check">Does it bloody work</button>
+                <div class="panel">
+                    <p>Well!!!!??????? does it????</p>
+                </div>
+            <button class="reviewed">Checked</button>
+            <div class="break"></div>
         </div>
+
+    <div class="container_report_1">
+        <div class="norm_rep">Example normal report</div>
+            <div class="sub_container_1">
+                <p>Findings:</p>
+                <p>No acute intracranial haemorrhage or established large territory infarction.
+                    No intracranial mass on this non-contrast study.
+                    Normal configuration of the ventricles and basal cisterns.
+                    The calvarium and imaged skull base are intact.
+                    The imaged paranasal sinuses and mastoid air cells are clear.
+                </p>
+                <p>Opinion:</p>
+                <p>No acute intracranial pathology</p>
+            </div>
+        </div> 
+    </div>
     </div>
 </body>
 </html>
