second page finished pretty much

--- a/ct_head_nc.html
+++ b/ct_head_nc.html
@@ -12,96 +12,97 @@
     <div class="banner">
         <div class="top">
             <div class="logo">Logo</div>
+            <a href="index.html" class="home_link">Homepage</a>
             <div class="my_account">My Account</div>
             <div class="faq">FAQ</div>
         </div>
 
-        <div class="container"> 
-            <div class="heading">
-                <div class="header_1">CT Head Non-contrast</div>
-            </div>       
-        </div>
-        <div class="container_2">
+        <div class="container">
+            <div class="header_1">CT Head Non-contrast</div>
             <h1 class="subheading">Search pattern</h1>
+            <img class="heading_picture" src="pictures/ct_head_nc.jpg" alt="Computed Tomography of the brain">
         </div>
-        <div class="search_list">
-            <button class="item_check">Clinical information and prior imaging</button>
-                <div class="panel">
-                    <p>asljfashldflasdf</p>
-                </div>
-            <button class="reviewed">Checked</button>
-            <div class="break"></div>
-            <button class="item_check">Scout images</button>
-                <div class="panel">
-                    <p>asljfashldflasdf</p>
-                </div>
-            <button class="reviewed">Checked</button>
-            <div class="break"></div>
-            <button class="item_check">Extracranial soft tissues</button>
-                <div class="panel">
-                    <p>askdfasdfbkasdfjkhasdigfjkasdgfjiasdhfjkashdfasdjkfhasjkdfhaslfhasdiofhasdlkfhasldfsladhfjasdhfasdohflasdhfasldhflasdhfklasdfhksdafasdklfj</p>
-                </div>
-            <button class="reviewed">Checked</button>
-            <div class="break"></div>
-            <button class="item_check"> Bones</button>
-                <div class="panel">
-                    <p>askdfasdfbkasdfjkhasdigfjkasdgfjiasdhfjkashdfasdjkfhasjkdfhaslfhasdiofhasdlkfhasldfsladhfjasdhfasdohflasdhfasldhflasdhfklasdfhksdafasdklfj</p>
-                </div>
-            <button class="reviewed">Checked</button>
-            <div class="break"></div>
-            <button class="item_check">CSF spaces</button>
-                <div class="panel">
-                    <p>askdfasdfbkasdfjkhasdigfjkasdgfjiasdhfjkashdfasdjkfhasjkdfhaslfhasdiofhasdlkfhasldfsladhfjasdhfasdohflasdhfasldhflasdhfklasdfhksdafasdklfj</p>
-                </div>
-            <button class="reviewed">Checked</button>
-            <div class="break"></div>
-            <button class="item_check">Brain parenchyma</button>
-                <div class="panel">
-                    <p>askdfasdfbkasdfjkhasdigfjkasdgfjiasdhfjkashdfasdjkfhasjkdfhaslfhasdiofhasdlkfhasldfsladhfjasdhfasdohflasdhfasldhflasdhfklasdfhksdafasdklfj</p>
-                </div>
-            <button class="reviewed">Checked</button>
-            <div class="break"></div>
-            <button class="item_check">Ischaemic change</button>
-                <div class="panel">
-                    <p>askdfasdfbkasdfjkhasdigfjkasdgfjiasdhfjkashdfasdjkfhasjkdfhaslfhasdiofhasdlkfhasldfsladhfjasdhfasdohflasdhfasldhflasdhfklasdfhksdafasdklfj</p>
-                </div>
-            <button class="reviewed">Checked</button>
-            <div class="break"></div>
-            <button class="item_check">Double check on coronals</button>
-                <div class="panel">
-                    <p>askdfasdfbkasdfjkhasdigfjkasdgfjiasdhfjkashdfasdjkfhasjkdfhaslfhasdiofhasdlkfhasldfsladhfjasdhfasdohflasdhfasldhflasdhfklasdfhksdafasdklfj</p>
-                </div>
-            <button class="reviewed">Checked</button>
-            <div class="break"></div>
-            <button class="item_check">Double check on sagittals</button>
-                <div class="panel">
-                    <p>askdfasdfbkasdfjkhasdigfjkasdgfjiasdhfjkashdfasdjkfhasjkdfhaslfhasdiofhasdlkfhasldfsladhfjasdhfasdohflasdhfasldhflasdhfklasdfhksdafasdklfj</p>
-                </div>
-            <button class="reviewed">Checked</button>
-            <div class="break"></div>
-            <button class="item_check">Does it bloody work</button>
-                <div class="panel">
-                    <p>Well!!!!??????? does it????</p>
-                </div>
-            <button class="reviewed">Checked</button>
-            <div class="break"></div>
-        </div>
-
-    <div class="container_report_1">
-        <div class="norm_rep">Example normal report</div>
-            <div class="sub_container_1">
-                <p>Findings:</p>
-                <p>No acute intracranial haemorrhage or established large territory infarction.
-                    No intracranial mass on this non-contrast study.
-                    Normal configuration of the ventricles and basal cisterns.
-                    The calvarium and imaged skull base are intact.
-                    The imaged paranasal sinuses and mastoid air cells are clear.
-                </p>
-                <p>Opinion:</p>
-                <p>No acute intracranial pathology</p>
+    </div>
+    <div class="search_list">
+        <button class="item_check grid_row_2">Clinical information and prior imaging</button>
+            <div class="panel">
+                <p>asljfashldflasdf</p>
             </div>
-        </div> 
+        <button class="reviewed">Checked</button>
+        <div class="break"></div>
+        <button class="item_check grid_row_2">Scout images</button>
+            <div class="panel">
+                <p>asljfashldflasdf</p>
+            </div>
+        <button class="reviewed">Checked</button>
+        <div class="break"></div>
+        <button class="item_check grid_row_2">Extracranial soft tissues</button>
+            <div class="panel">
+                <p>askdfasdfbkasdfjkhasdigfjkasdgfjiasdhfjkashdfasdjkfhasjkdfhaslfhasdiofhasdlkfhasldfsladhfjasdhfasdohflasdhfasldhflasdhfklasdfhksdafasdklfj</p>
+            </div>
+        <button class="reviewed">Checked</button>
+        <div class="break"></div>
+        <button class="item_check grid_row_2"> Bones</button>
+            <div class="panel">
+                <p>askdfasdfbkasdfjkhasdigfjkasdgfjiasdhfjkashdfasdjkfhasjkdfhaslfhasdiofhasdlkfhasldfsladhfjasdhfasdohflasdhfasldhflasdhfklasdfhksdafasdklfj</p>
+            </div>
+        <button class="reviewed">Checked</button>
+        <div class="break"></div>
+        <button class="item_check grid_row_2">CSF spaces</button>
+            <div class="panel">
+                <p>askdfasdfbkasdfjkhasdigfjkasdgfjiasdhfjkashdfasdjkfhasjkdfhaslfhasdiofhasdlkfhasldfsladhfjasdhfasdohflasdhfasldhflasdhfklasdfhksdafasdklfj</p>
+            </div>
+        <button class="reviewed">Checked</button>
+        <div class="break"></div>
+        <button class="item_check grid_row_2">Brain parenchyma</button>
+            <div class="panel">
+                <p>askdfasdfbkasdfjkhasdigfjkasdgfjiasdhfjkashdfasdjkfhasjkdfhaslfhasdiofhasdlkfhasldfsladhfjasdhfasdohflasdhfasldhflasdhfklasdfhksdafasdklfj</p>
+            </div>
+        <button class="reviewed">Checked</button>
+        <div class="break"></div>
+        <button class="item_check grid_row_2">Ischaemic change</button>
+            <div class="panel">
+                <p>askdfasdfbkasdfjkhasdigfjkasdgfjiasdhfjkashdfasdjkfhasjkdfhaslfhasdiofhasdlkfhasldfsladhfjasdhfasdohflasdhfasldhflasdhfklasdfhksdafasdklfj</p>
+            </div>
+        <button class="reviewed">Checked</button>
+        <div class="break"></div>
+        <button class="item_check grid_row_2">Double check on coronals</button>
+            <div class="panel">
+                <p>askdfasdfbkasdfjkhasdigfjkasdgfjiasdhfjkashdfasdjkfhasjkdfhaslfhasdiofhasdlkfhasldfsladhfjasdhfasdohflasdhfasldhflasdhfklasdfhksdafasdklfj</p>
+            </div>
+        <button class="reviewed">Checked</button>
+        <div class="break"></div>
+        <button class="item_check grid_row_2">Double check on sagittals</button>
+            <div class="panel">
+                <p>askdfasdfbkasdfjkhasdigfjkasdgfjiasdhfjkashdfasdjkfhasjkdfhaslfhasdiofhasdlkfhasldfsladhfjasdhfasdohflasdhfasldhflasdhfklasdfhksdafasdklfj</p>
+            </div>
+        <button class="reviewed">Checked</button>
+        <div class="break"></div>
+        <button class="item_check grid_row_2">Does it bloody work</button>
+            <div class="panel">
+                <p>Well!!!!??????? does it????</p>
+            </div>
+        <button class="reviewed">Checked</button>
+        <div class="break"></div>
     </div>
-    </div>
+
+<div class="container_report_1">
+    <div class="norm_rep">Example normal report</div>
+        <div class="sub_container_1">
+            <p>Findings:</p>
+            <p>No acute intracranial haemorrhage or established large territory infarction.
+                No intracranial mass on this non-contrast study.
+                Normal configuration of the ventricles and basal cisterns.
+                The calvarium and imaged skull base are intact.
+                The imaged paranasal sinuses and mastoid air cells are clear.
+            </p>
+            <p>Opinion:</p>
+            <p>No acute intracranial pathology</p>
+        </div>
+    </div> 
+</div>
 </body>
+<footer>
+    <p>Copyright &copy; Radiology Reporting Templates Ltd 2022</p>
+</footer>
 </html>
