Adding ct_head_nc, ct_chest, and ct_addomen_and_pelvis

--- a/ct_head_nc.html
+++ b/ct_head_nc.html
@@ -32,55 +32,55 @@
         <div class="break"></div>
         <button class="item_check grid_row_2">Scout images</button>
             <div class="panel">
-                <p>asljfashldflasdf</p>
+                <p>Occasionally abnormal skull morphology, fractures and previous neurosurgical procedures are easier to appreciate on the scout images</p>
             </div>
         <button class="reviewed">Checked</button>
         <div class="break"></div>
         <button class="item_check grid_row_2">Extracranial soft tissues</button>
             <div class="panel">
-                <p>askdfasdfbkasdfjkhasdigfjkasdgfjiasdhfjkashdfasdjkfhasjkdfhaslfhasdiofhasdlkfhasldfsladhfjasdhfasdohflasdhfasldhflasdhfklasdfhksdafasdklfj</p>
+                <p>Suggested window levels: W:350-400 HU L:20-60 HU
+                    Look for any subgaleal haematoma. Examine the globes, sinuses, palate, and pharnyx</p>
             </div>
         <button class="reviewed">Checked</button>
         <div class="break"></div>
         <button class="item_check grid_row_2"> Bones</button>
             <div class="panel">
-                <p>askdfasdfbkasdfjkhasdigfjkasdgfjiasdhfjkashdfasdjkfhasjkdfhaslfhasdiofhasdlkfhasldfsladhfjasdhfasdohflasdhfasldhflasdhfklasdfhksdafasdklfj</p>
+                <p>Suggested window levels: W:2800 HU L: 600 HU
+                    Review the skull vault for any fractures or destructive bone lesions. Spend time reviewing the skull base due to the anatomical complexity. Ensure both TMJs are normally aligned.</p>
+            </div>
+        <button class="reviewed">Checked</button>
+        <div class="break"></div>
+        <button class="item_check grid_row_2">Blood/subdural</button>
+            <div class="panel">
+                <p>Suggested window levels: W 80 HU L 180 HU.
+                    Review for any hyperdense collections. Pay particular attention to the tentorium and occiptal horns of the lateral ventricles.</p>
             </div>
         <button class="reviewed">Checked</button>
         <div class="break"></div>
         <button class="item_check grid_row_2">CSF spaces</button>
             <div class="panel">
-                <p>askdfasdfbkasdfjkhasdigfjkasdgfjiasdhfjkashdfasdjkfhasjkdfhaslfhasdiofhasdlkfhasldfsladhfjasdhfasdohflasdhfasldhflasdhfklasdfhksdafasdklfj</p>
+                <p>Suggested window levels: W 80 HU L: 40 HU
+                    Review the basal cisterns and sulci. Are they visible and commensurate with ehe patient's age and ventricular size?Do they extend to the bone? If not is there any subacute (isodense) haemorrhage?Is there any subarachnoid blood? Look in the dependent areas particularly e.g. interpeduncular fossa and occipital horns of the lateral ventricles. Review the basilar tip and MCAs for any hyperdense vessel sign.</p>
             </div>
         <button class="reviewed">Checked</button>
         <div class="break"></div>
         <button class="item_check grid_row_2">Brain parenchyma</button>
             <div class="panel">
-                <p>askdfasdfbkasdfjkhasdigfjkasdgfjiasdhfjkashdfasdjkfhasjkdfhaslfhasdiofhasdlkfhasldfsladhfjasdhfasdohflasdhfasldhflasdhfklasdfhksdafasdklfj</p>
+                <p>Suggested window levels: W 80 HU L: 40 HU
+                    Start at the vertex. Look at the brain matter and gyral pattern. Are there any masses, abnormal attenuation, or mass effect?</p>
             </div>
         <button class="reviewed">Checked</button>
         <div class="break"></div>
-        <button class="item_check grid_row_2">Ischaemic change</button>
+        <button class="item_check grid_row_2">Grey-white matter differentiation change</button>
             <div class="panel">
-                <p>askdfasdfbkasdfjkhasdigfjkasdgfjiasdhfjkashdfasdjkfhasjkdfhaslfhasdiofhasdlkfhasldfsladhfjasdhfasdohflasdhfasldhflasdhfklasdfhksdafasdklfj</p>
+                <p>Suggested window levels: W: 30 HU L: 30 HU
+                    Search for subtle cortical hypoattenuation by assessing grey-white matter differentiation. The cortical and deep grey matter should be distinct from the white matter. Pay particular attenton to the insular cortex and basal ganglia.</p>
             </div>
         <button class="reviewed">Checked</button>
         <div class="break"></div>
-        <button class="item_check grid_row_2">Double check on coronals</button>
+        <button class="item_check grid_row_2">Review areas</button>
             <div class="panel">
-                <p>askdfasdfbkasdfjkhasdigfjkasdgfjiasdhfjkashdfasdjkfhasjkdfhaslfhasdiofhasdlkfhasldfsladhfjasdhfasdohflasdhfasldhflasdhfklasdfhksdafasdklfj</p>
-            </div>
-        <button class="reviewed">Checked</button>
-        <div class="break"></div>
-        <button class="item_check grid_row_2">Double check on sagittals</button>
-            <div class="panel">
-                <p>askdfasdfbkasdfjkhasdigfjkasdgfjiasdhfjkashdfasdjkfhasjkdfhaslfhasdiofhasdlkfhasldfsladhfjasdhfasdohflasdhfasldhflasdhfklasdfhksdafasdklfj</p>
-            </div>
-        <button class="reviewed">Checked</button>
-        <div class="break"></div>
-        <button class="item_check grid_row_2">Does it bloody work</button>
-            <div class="panel">
-                <p>Well!!!!??????? does it????</p>
+                <p>Tentorium. Orbit and globes. Retropharyngeal space. Foramen magnum. Middle ear. Paranasal sinuses.</p>
             </div>
         <button class="reviewed">Checked</button>
         <div class="break"></div>
