--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
             <img class="ct_head" src="pictures/ct_head.jpg" alt="Computed Tomography of the brain">
             </div>
         </div>
+        
 
         
     </div>
@@ -38,11 +39,11 @@
             </div>
             <div class="two">
                 <img class="ct_chest, thumbnail" src="pictures/ct_chest.jpg" alt="Computed Tomography of the chest">
-                <p class="subtext">Contrast enhanced CT chest</p>
+                <a href="ct_chest_with_contrast.html" class="subtext">Contrast enhanced CT chest</a>
             </div>
             <div class="three">
                 <img class="ct_abdomen, thumbnail" src="pictures/ct_abdomen.jpg" alt="Computed Tomography of the abdomen">
-                <p class="subtext">Contrast enhanced CT abdomen and pelvis</p>
+                <a href="ct_abdomen_pvc.html" class="subtext">Contrast enhanced CT abdomen and pelvis</a>
             </div>
         </div>
 
