Change of quote

--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
     </div>
     
     <div class="container_3">
-        <div class="quote">I awlays struggled with structuring my reports, or even having a systematic way of approaching scans. These templates have really developed my interpretation and reporting skills.</div>
+        <div class="quote">The radiology report represents the sum of a radiologist's highest level of synthesis and insight into a patient's condition and is the most important way that radiologists contribute patient care</div>
 
-        <div class="quote_author">- Dr O Adesalu MBBS MMedEd PgCert FHEA FRCR part 1</div>
+        <div class="quote_author">- Michael P Hartung MD</div>
     </div>
 
     <div class="container_4">
