--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     </div>
     
     <div class="container_3">
-        <div class="quote">The radiology report represents the sum of a radiologist's highest level of synthesis and insight into a patient's condition and is the most important way that radiologists contribute patient care</div>
+        <div class="quote">The radiology report represents the sum of a radiologist's highest level of synthesis and insight into a patient's condition and is the most important way that radiologists contribute to patient care</div>
 
         <div class="quote_author">- Michael P Hartung MD</div>
     </div>
